k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: myapp
  labels:
    app: ucreativa-proyecto-microservicios
    tier: backend
spec:
  selector:
    matchLabels:
      app: ucreativa-proyecto-microservicios
      name: backend-deployment
      tier: backend
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ucreativa-proyecto-microservicios
        name: backend-deployment
        tier: backend
    spec:
      containers:
        - name: backend
          image: nabetse28/backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
