k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: myapp
  labels:
    app: ucreativa-proyecto-microservicios
    tier: frontend
spec:
  selector:
    matchLabels:
      app: ucreativa-proyecto-microservicios
      name: frontend-deployment
      tier: frontend
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ucreativa-proyecto-microservicios
        name: frontend-deployment
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: nabetse28/frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
