k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: myapp
  labels:
    app: ucreativa-proyecto-microservicios
    tier: frontend
spec:
  selector:
    name: frontend-deployment
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30090
